--- a/FitHub/FitHub/Info.plist
+++ b/FitHub/FitHub/Info.plist
@@ -6,15 +6,19 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string></string>
+	</array>
 	<key>CFBundleIcons</key>
 	<dict>
 		<key>CFBundleAlternateIcons</key>
 		<dict>
-			<key>icon_whitebg</key>
+			<key>WhitebgIcon</key>
 			<dict>
 				<key>CFBundleIconFiles</key>
 				<array>
-					<string>icon_whitebg</string>
+					<string>WhitebgIcon</string>
 				</array>
 				<key>UIPrerenderedIcon</key>
 				<false/>
